--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = pytesseract
-version = attr: pytesseract.__version__
+name = unstructured_pytesseract
+version = attr: unstructured_pytesseract.__version__
 author = Samuel Hoffstaetter
 author_email = samuel@hoffstaetter.com
 maintainer = Matthias Lee
@@ -34,7 +34,7 @@ python_requires = >=3.8
 
 [options.entry_points]
 console_scripts =
-    pytesseract = pytesseract.pytesseract:main
+    pytesseract = pytesseract_unstructured.pytesseract:main
 
 [options.packages.find]
 exclude =
